<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.skyghis</groupId>
    <artifactId>j-interop-ng-parent</artifactId>
    <version>3.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Pure Java - COM bridge - Parent</name>
    <description>
        Implementation of DCOM wire protocol (MSRPC) to enable development of Pure Bi-Directional, Non-Native Java applications which can interoperate with any COM component.
        The implementation is itself purely in Java and does not use JNI to provide COM access.

        This is a cleaned-up and improved version of the j-Interop library.
        Based on j-interop kohsuke work, and modified to use jcifs-ng.
    </description>
    <url>https://github.com/skyghis/j-interop-ng</url>
    <licenses>
        <license>
            <name>GNU LGPLv3</name>
            <url>https://choosealicense.com/licenses/lgpl-3.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>skyghis</id>
            <name>SkyghiS</name>
            <email>skyghis@gmail.com</email>
            <url>https://github.com/skyghis</url>
        </developer>
    </developers>

    <modules>
        <module>j-interop</module>
        <module>j-interopdeps</module>
    </modules>

    <scm>
        <url>https://github.com/skyghis/j-interop-ng</url>
        <connection>scm:git:https://github.com/skyghis/j-interop-ng.git</connection>
        <developerConnection>scm:git:git@github.com:skyghis/j-interop-ng.git</developerConnection>
        <tag></tag>
    </scm>
    <issueManagement>
        <url>https://github.com/skyghis/j-interop-ng/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarning>true</showWarning>
                </configuration>
            </plugin>
            <!-- Set resources encoding. -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <!-- Sonatype Nexus Repository Manager. -->
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <!-- FIXME: Actual Javadoc is crappy and need to be fixed. -->
                    <doclint>-html</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <rulesUri>https://gist.githubusercontent.com/skyghis/2590f54da311a05f2495a33b98dd476b/raw/0a563b7275f78ccf170f5c8347e32735c797d7b9/rules.jre7.xml</rulesUri>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
